force-app/main/default/objects/Zentra_OTP_Session__c/Zentra_OTP_Session__c.object-meta.xml
<CustomObject>
    <description>Stores OTP sessions for customer authentication via WhatsApp banking agent. Tracks OTP codes, verification attempts, session tokens, and expiry. Part of the TruZentra Banking Assistant. Developer: BlueForce Team.</description>
    <label>Zentra OTP Session</label>
    <nameField>
        <displayFormat>OTP-{00000}</displayFormat>
        <label>OTP Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zentra OTP Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>