force-app/main/default/objects/Zentra_OTP_Session__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of verification attempts made. Max 3 before lockout.</description>
    <label>Attempt Count</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>