force-app/main/default/objects/Zentra_OTP_Session__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Person Account representing the customer requesting OTP authentication.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zentra OTP Sessions</relationshipLabel>
    <relationshipName>Zentra_OTP_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>