force-app/main/default/objects/Zentra_OTP_Session__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>DateTime when this OTP expires. Default: CreatedDate + 5 minutes.</description>
    <label>Expires At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>