force-app/main/default/objects/Zentra_OTP_Session__c/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <description>6-digit OTP code. Should be encrypted via Shield Platform Encryption in production. Hackathon: mock value 123456.</description>
    <label>OTP Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>