force-app/main/default/objects/Zentra_OTP_Session__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>The phone number to which the OTP was sent. Stored for audit trail.</description>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>