force-app/main/default/objects/Zentra_OTP_Session__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <description>Session token generated upon successful OTP verification. Used for subsequent authenticated requests within the session.</description>
    <label>Session Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>